# ownshell

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE.md  README.md
examples/: CMakeLists.txt  colored_shell.cc  env_shell.cc  hooked_shell.cc  man_shell.cc  my_shell.cc  simple_shell.cc
src/: ownshell.h  shell.h  shell_app.cc  shell_app.h  shell_cmd.cc  shell_cmd.h  shell_component.cc  shell_component.h  shell_env.cc  shell_env.h  shell_except.h  shell_help_formatter.h  shell_info.cc  shell_info.h  shell_info.h.in  shell_module.cc  shell_module.h  shell_runner.cc  shell_runner.h
src/help_formatters/: shell_colored_help_formatter.cc  shell_colored_help_formatter.h  shell_default_help_formatter.cc  shell_default_help_formatter.h  shell_help_formatter_factory.cc
src/iterators/: shell_component_iterator.h  shell_component_null_iterator.h  shell_module_default_iterator.cc  shell_module_default_iterator.h  shell_module_iterator.cc  shell_module_iterator.h  shell_module_memento.cc  shell_module_memento.h
tests/: CMakeLists.txt  ownshelllib_unittests_main.cc  shell_cmd_test.cc  shell_cmd_test.h  test_shell_app.cc  test_shell_cmd.cc  test_shell_env.cc  test_shell_iterators.cc  test_shell_module.cc  test_shell_runner.cc
tests/gtest-1.7.0/: config.status  libtool
tests/gtest-1.7.0/lib/: libgtest_main.la
